cluster/apps/networking/traefik/unifi-router/external-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-router
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ExternalName
  ports:
    - name: https
      port: 443
      targetPort: 443
  externalName: ${GATEWAY_ADDR}
