cluster/apps/networking/traefik/unifi-router/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-router
  namespace: networking
  annotations:
    hajimari.io/appName: unifi
    hajimari.io/enable: 'true'
    hajimari.io/icon: fire
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: networking-rfc1918@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - unifi.${SECRET_DOMAIN}
  rules:
    - host: unifi.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi-router
                port:
                  number: 8080
